volexc/tests/ui/parse_missing_field_index.out
Error: found ';' expected integer
   ╭─[ parse_missing_field_index.vol:3:15 ]
   │
 3 │     bar: u32 =;
   │               ┬  
   │               ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: integer
───╯