volexc/tests/ui/parse_missing_field_index.vol
// Missing field index in message
message Foo {
    bar: u32 =;
}
